Refactor structure and Update README

--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
       <h2>Create order</h2>
       <form id="order-form">
         <select id="order-product"></select>
-        <input type="number" id="order-quantity" min="1" required />
+        <input
+          type="number"
+          id="order-quantity"
+          min="1"
+          placeholder="Quantity order"
+          required
+        />
         <button type="submit">Order</button>
       </form>
     </section>
