adjust decimal formatting and font size in media query

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <header>
         <h1>Inventory Management System</h1>
-        <p class="subtitle">Total control of stock and sales</p>
+        <p class="subtitle">Stock and sales control</p>
       </header>
       <!-- SECTION TABS -->
       <nav class="nav">
@@ -183,11 +183,7 @@
         <hr />
         <h3>Recent Orders</h3>
         <div class="search-filter">
-          <input
-            type="text"
-            id="search-orders"
-            placeholder="Search orders..."
-          />
+          <input type="text" id="search-orders" placeholder="Search order..." />
           <select id="filter-status">
             <option value="">All status</option>
             <option value="pending">Pending</option>
@@ -230,7 +226,7 @@
           <input
             type="text"
             id="search-history"
-            placeholder="Search history..."
+            placeholder="Search record..."
           />
           <select id="filter-movement-type">
             <option value="all">All movements</option>
